Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 </ul>
 
 <h3>
+<a id="version-history" class="anchor" href="#version-history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Version History</h3>
+
+<ul>
+<li>6/11/16 - LFS-Creator (7.9) BETA Release Date (StarLinux Sourceforge Download)</li>
+<li>6/12/16 - LFS-Creator Source Code Upload</li>
+</ul>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p><a href="https://github.com/AwlsomeAlex" class="user-mention">@AwlsomeAlex</a> (Main Developer of LFS-Creator [The Live-CD, not the project]) 
