Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p><a href="https://github.com/AwlsomeAlex" class="user-mention">@AwlsomeAlex</a> (Main Developer of LFS-Creator [The Live-CD, not the project]) 
-Gerard Beekmans (Creator of Linux From Scratch Project)
-Bruce Dubbs (Linux From Scratch Manager)</p>
+<ul>
+<li>
+<a href="https://github.com/AwlsomeAlex" class="user-mention">@AwlsomeAlex</a> (Main Developer of LFS-Creator [The Live-CD, not the project]) </li>
+<li>Gerard Beekmans (Creator of Linux From Scratch Project)</li>
+<li>Bruce Dubbs (Linux From Scratch Manager)</li>
+</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
