Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 </ul>
 
 <h3>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h3>
+
+<p><a href="https://sourceforge.net/projects/star-linux/files/LFS-Creator/LFS-Creator%207.9/Development%20Builds/LFS%20Creator%207.9%20%5BBETA%5D.iso/download">Download LFS-Creator 7.9 [BETA]</a></p>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <ul>
